--- a/style.scss
+++ b/style.scss
@@ -311,6 +311,12 @@ table {
     table tr th :last-child, table tr td :last-child {
       margin-bottom: 0; }
 
+// to avoid code scrolling
+pre code {
+  white-space: pre-wrap;
+}
+
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
